--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,7 +111,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Bilo', Arial, Helvetica, sans-serif;
 }
 
 @theme inline {
